--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Ramall
+spring.application.name=Ram.all
 spring.datasource.url=jdbc:mysql://localhost:3306/ramal_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=29042510
